--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
     "@types/node": "^18.6.1",
     "tsup": "^6.2.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@types/inquirer": "^8.2.1",
+    "chalk": "^5.0.1",
+    "commander": "^9.4.0",
+    "inquirer": "^9.0.2"
   }
 }
