--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "^18.6.1",
     "tsup": "^6.2.0",
     "typescript": "^4.7.4"
@@ -21,6 +22,7 @@
     "@types/inquirer": "^8.2.1",
     "chalk": "^5.0.1",
     "commander": "^9.4.0",
+    "fs-extra": "^10.1.0",
     "inquirer": "^9.0.2"
   }
 }
