--- a/template/src/manifest.json
+++ b/template/src/manifest.json
@@ -6,7 +6,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["main.js"]
+      "js": ["index.js"]
     }
   ],
   "action": {
