--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
   "scripts": {
     "build": "tsup src/index.ts --format esm --clean --sourcemap --minify --metafile",
     "dev": "tsup src/index.ts --format esm --watch --clean --onSuccess \"node dist/index.js\"",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "release": "pnpm run build && pnpm publish"
   },
-  "keywords": [],
+  "keywords": ["chrome", "extension", "typescript", "pnppm", "bootstrap"],
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/emirem/create-extension.git"
+  },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^18.6.1",
