--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsup src/index.ts --format esm --clean --sourcemap --minify --metafile",
     "dev": "tsup src/index.ts --format esm --watch --clean --onSuccess \"node dist/index.js\"",
     "start": "node dist/index.js",
-    "release": "pnpm run build && pnpm publish"
+    "preversion": "pnpm run build",
+    "postversion": "git push --tags && pnpm publish --tag $npm_package_version && git push"
   },
   "keywords": [
     "chrome",
