--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "tsup src/index.ts --format esm --watch --clean --onSuccess \"node dist/index.js\"",
     "start": "node dist/index.js",
     "preversion": "pnpm run build",
-    "postversion": "git push --tags && pnpm publish --tag $npm_package_version && git push"
+    "postversion": "git push --tags && pnpm publish && git push"
   },
   "keywords": [
     "chrome",
